# contrel

./: .gitignore  .gitmodules  README.md  commitlint.config.js
backend/: .env.example  .gitignore  .rustfmt.toml  Cargo.toml  README.md
backend/migrations/: 0001_create_sessions_table.up.sql  0002_create_users_table.down.sql  0002_create_users_table.up.sql  0003_make_first_name_and_last_name_in_users_no_unique.down.sql  0003_make_first_name_and_last_name_in_users_no_unique.up.sql  0004_create_hotels_table.down.sql  0004_create_hotels_table.up.sql  0005_create_guests_table.down.sql  0005_create_guests_table.up.sql  0006_create_rooms_table.down.sql  0006_create_rooms_table.up.sql  0007_create_bookings_table.down.sql  0007_create_bookings_table.up.sql
backend/src/: constants.rs  db.rs  error.rs  main.rs  snowflake_generator.rs  types.rs
backend/src/services/: mod.rs
backend/src/services/auth/: mod.rs  model.rs  routes.rs
backend/src/services/booking/: model.rs  routes.rs
backend/src/services/guest/: model.rs  routes.rs
backend/src/services/hotel/: model.rs  routes.rs
backend/src/services/room/: model.rs  routes.rs
backend/src/services/session/: middleware.rs  mod.rs  model.rs
backend/src/services/stats/: model.rs  routes.rs
backend/src/services/system/: routes.rs
backend/src/services/user/: model.rs  routes.rs
backend/src/utils/: argon.rs  macros.rs  mod.rs  time.rs
backend/src/web_socket/: handler.rs  mod.rs  routes.rs  socket.rs
backend/src/web_socket/message/: mod.rs  payload.rs
desktop-client/: .clang-format  .gitignore  CMakeLists.txt  README.md  justfile
desktop-client/libs/glad/: CMakeLists.txt
desktop-client/libs/glad/include/glad/: gl.h
desktop-client/src/: app.cc  app.h  constants.h  entities.h  imgui_config.h  main.cc
desktop-client/src/backend/: api.cc  backend.h  web_socket.cc
desktop-client/src/ui/layouts/: app.cc  auth.cc  layouts.h
desktop-client/src/ui/screens/: auth.cc  bookings.cc  dashboard.cc  guests.cc  hotels.cc  rooms.cc  screens.h
desktop-client/src/ui/widgets/: app_badges.cc  buttons.cc  combos.cc  inputs.cc  layout.cc  tables.cc  texts.cc  widgets.h
desktop-client/src/utils/: string.cc  texture.cc  time.cc  utils.h
desktop-client/src/workers/: api.cc  web_socket.cc  workers.h
