[package]
name = "contrel-backend"
version = "0.0.1"
authors = ["Ivan <contact@mixero.dev>"]
edition = "2021"
description = "Backend module of the Contrel Project"
readme = "README.md"
homepage = "https://contrel.mixero.dev/api"
repository = "https://github.com/Mixerou/contrel"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
mime = "0.3.17"
rmp-serde = "1.3.0"
serde = { version = "1.0.216", features = ["derive"] }
